# TicTacTo

./: .dictionary  README.md  codebook.toml  local_postgres_config.json  pyproject.toml  test.txt  testrunner.sh
BACKEND_NAME_PLACEHOLDER/: __init__.py  main.py
BACKEND_NAME_PLACEHOLDER/api/: __init__.py  _app.py  _routes.py
BACKEND_NAME_PLACEHOLDER/config/: __init__.py  _config_class.py
BACKEND_NAME_PLACEHOLDER/crud/: _crud.py
BACKEND_NAME_PLACEHOLDER/engine/: __init__.py
BACKEND_NAME_PLACEHOLDER/model/: __init__.py  _entity.py
BACKEND_NAME_PLACEHOLDER/schema/: __init__.py  _entity.py
BACKEND_NAME_PLACEHOLDER/utils/: __init__.py  _test.py  _user.py
backend_opriessnig/: __init__.py  cli.py  main.py
backend_opriessnig/api/: _app.py  _routes.py
backend_opriessnig/config/: _logging.py
backend_opriessnig/crud/: __init__.py  _crud.py
backend_opriessnig/engine/: __init__.py  _game_engine.py
backend_opriessnig/model/: __init__.py  _entity.py  _game.py  _person.py  _user.py
backend_opriessnig/schema/: __init__.py  _auth.py  _game.py
backend_opriessnig/service/: __init__.py  _auth.py
backend_opriessnig/utils/: _test.py  _user.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend_ui/src/: App.css  api.js
test/api/: __init__.py  test_api_00.py
test/config/: test_config.json  test_config_00.py  test_config_01.py
test/crud/: test_crud_00.py
test/engine/: test_engine_00.py
test/model/: test_entity_00.py  test_person_00.py  test_user_00.py
test/schema/: test_schema_00.py
test/utils/: test_00.py
