[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0",
  "wheel>=0.41"
]

[project]
authors = [ { name = "Robert Ulmer", email = "rulmer@lr.htlweiz.at" } ]

name = "tictactoe-api"
version = "1.0.0"
description = "A RESTful API for TicTacToe game with game history and move tracking"
readme = "README.md"
requires-python = ">3.13,<4.0"
license = "GPL-3.0-or-later"
keywords = [
  "api",
  "backend",
  "fastapi",
  "sql",
  "sqlalchemy",
  "tictactoe",
  "game"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python"
]

dependencies = [
  "fastapi>=0.120",
  "passlib[bcrypt]>=1.7",
  "psycopg2-binary>=2.9",
  "pydantic>=2",
  "python-jose>=3.5",
  "sqlalchemy>=2",
  "uvicorn[standard]>=0.27"
]

[project.scripts]
tictactoe-api = "backend_opriessnig.cli:main"

[project.urls]
"Homepage" = "https://BACKEND_NAME_PLACEHOLDER.com"
"Documentation" = "https://BACKEND_NAME_PLACEHOLDER.com"

[project.optional-dependencies]
lint = [
    "basedpyright",
    "black",
    "codespell>=2.2.4",
    "isort",
    "ruff",
    "tomli",
    "validate-pyproject[all]",
    "vulture",
]

test = [
  "pytest"
]

vim = [
  "ollama",
  "pygls<2",
]

